--- a/nav.html
+++ b/nav.html
@@ -32,7 +32,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="metal.html">
+                        <a href="music/metal.html#">
                             <img src="icon_placeholder.png" alt="icon item 00" />
                             <div class="nav-text">Metal</div>
                         </a>
