--- a/music/metal.html
+++ b/music/metal.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="UTF-8" />
     <title>Metal</title>
-    <link rel="icon" href="images/pageIcon.png" />
-    <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
+    <link rel="icon" href="../images/pageIcon.png" />
+    <link rel="stylesheet" media="screen and (min-width:1081px)" href="../css/style.css" />
+    <link rel="stylesheet" media="screen and (max-width:1080px)" href="../css/mobile.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
 <body class="metal-bg">
     <header>
         <div class="title">
-            <a href="index.html" class="logo50"></a>
+            <a href="../index.html#" class="logo50"></a>
             <div class="subtitle">
                 Metal
             </div>
         </div>
     </header>
     <aside class="navbar">
-        <iframe src="nav.html"></iframe>
-        <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
-        <img class="navbar-arrow" src="images/fleche.png" alt="icon navbar" />
+        <iframe src="../nav.html"></iframe>
+        <img class="navbar-line" src="../images/ligne.png" alt="icon navbar" />
+        <img class="navbar-arrow" src="../images/fleche.png" alt="icon navbar" />
     </aside>
     <main>
         <section class="no-top-separator">
