integrated the video

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
         </div>
     </header>
-    <div class="head-img">
-        <img src="images/musicBackgrounds/metal.jpg" alt="image background" />
-    </div>
+        <video autoplay loop muted class="head-img">
+            <source src="images/background.mp4" type="video/mp4">
+        </video>
     <aside class="navbar">
         <iframe src="nav.html"></iframe>
         <img class="navbar-line" src="images/ligne.png" alt="icon navbar" />
