added metal icon

--- a/nav.html
+++ b/nav.html
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <a href="music/metal.html#">
-                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <img src="images/icons/metal.png" alt="icon item 00" />
                             <div class="nav-text">Metal</div>
                         </a>
                     </li>
