external link in new tab

--- a/music/metal.html
+++ b/music/metal.html
@@ -32,7 +32,7 @@
                 </h3>
                 <p>
                     Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
-                    rapide et agressif. <a href="https://wikipedia.org/wiki/Black_Sabbath">Black Sabbath</a> a été le
+                    rapide et agressif. <a href="https://wikipedia.org/wiki/Black_Sabbath" target="_blank">Black Sabbath</a> a été le
                     premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
                 </p>
                 <figure>
