forgot the footer

--- a/music/metal.html
+++ b/music/metal.html
@@ -169,7 +169,7 @@
         </section>
     </main>
     <footer>
-        <iframe src="footer.html"></iframe>
+        <iframe src="../footer.html"></iframe>
     </footer>
 </body>
 
