--- a/nav.html
+++ b/nav.html
@@ -74,7 +74,7 @@
                 <span class="dropdown-title">Autres</span>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="about.html#">
                             <img src="icon_placeholder.png" alt="icon item 00" />
                             <div class="nav-text">A propos</div>
                         </a>
