added some icons

--- a/nav.html
+++ b/nav.html
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <img src="images/icons/rock.png" alt="icon item 00" />
                             <div class="nav-text">Rock</div>
                         </a>
                     </li>
@@ -51,13 +51,13 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <img src="images/icons/electro.png" alt="icon item 00" />
                             <div class="nav-text">Electro</div>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <img src="images/icons/rap.png" alt="icon item 00" />
                             <div class="nav-text">Rap</div>
                         </a>
                     </li>
@@ -75,7 +75,7 @@
                 <ul>
                     <li>
                         <a href="about.html#">
-                            <img src="icon_placeholder.png" alt="icon item 00" />
+                            <img src="images/icons/about.png" alt="icon item 00" />
                             <div class="nav-text">A propos</div>
                         </a>
                     </li>
