--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                                         alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Développeur, graphiste et metalleux</em>
+                                <em>Développeur, graphiste et métalleux</em>
                             </p>
                         </li>
                         <li>
@@ -97,7 +97,7 @@
                                         alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Punchliner et passioné d'electro</em>
+                                <em>Punchliner et passionné d'électro</em>
                             </p>
                         </li>
                     </ul>
