W3C added in comments + link to github profiles

--- a/about.html
+++ b/about.html
@@ -26,28 +26,34 @@
     </aside>
     <main>
         <section class="no-top-separator">
+            <!--W3C : Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h2>
                     Le projet
                 </h2>
                 <p>
+                    Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
+                    une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
+                    des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
+                </p>
+                <p>
                     Ce site a vu le jour grâce à un projet tutoré de première année de DUT Informatique. Il a été
-                    réalisé par 4 étudiants (<a href="">plus d'information</a>).
+                    réalisé par 4 étudiants (<a href="#team">plus d'informations</a>).
                     Le projet est en open source sous license MIT disponible <a
                         href="https://github.com/oxypomme/PT19_20" target="_blank">GitHub</a>.
                 </p>
             </article>
-            <article>
+            <article id="team">
                 <h2>
                     L'équipe
                 </h2>
                 <p>
                     Notre équipe est constituée de 4 membres :
-                    <ul>
+                    <ul class="profile">
                         <li>
                             <h3>Nathan HANEN</h3>
                             <div>
-                                <img class="round" src="https://avatars0.githubusercontent.com/u/30344403?s=150"
+                                <img class="round" src="https://avatars0.githubusercontent.com/u/30344403"
                                     alt="GitHub profil picture" />
                             </div>
                             <div>
@@ -55,13 +61,13 @@
                                         alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Développeur, graphiste et métalleux</em>
+                                Développeur, graphiste et métalleux.
                             </p>
                         </li>
                         <li>
                             <h3>Tom SUBLET</h3>
                             <div>
-                                <img class="round" src="https://avatars1.githubusercontent.com/u/34627360?s=150"
+                                <img class="round" src="https://avatars1.githubusercontent.com/u/34627360"
                                     alt="GitHub profil picture" />
                             </div>
                             <div>
@@ -69,35 +75,35 @@
                                         alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Développeur, Designer et rock dans l'âme</em>
+                                Développeur, designer et rockeur dans l'âme.
                             </p>
                         </li>
                         <li>
                             <h3>Chang GAO</h3>
                             <div>
-                                <img class="round" src=""
+                                <img class="round" src="https://avatars3.githubusercontent.com/u/56112613"
                                     alt="GitHub profil picture" />
                             </div>
                             <div>
-                                <a href="" target="_blank"><img src="images/github.png"
-                                        alt="GitHub icon" /> Profil GitHub</a>
+                                <a href="https://github.com/catherinegaochangdffeef" target="_blank"><img
+                                        src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Designeuse, et fan de pop</em>
+                                Designeuse et fan de pop
                             </p>
                         </li>
                         <li>
                             <h3>Maxime JOURNET</h3>
                             <div>
-                                <img class="round" src=""
+                                <img class="round" src="https://avatars0.githubusercontent.com/u/56112283"
                                     alt="GitHub profil picture" />
                             </div>
                             <div>
-                                <a href="" target="_blank"><img src="images/github.png"
-                                        alt="GitHub icon" /> Profil GitHub</a>
+                                <a href="https://github.com/maximejournet54" target="_blank"><img
+                                        src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                <em>Punchliner et passionné d'électro</em>
+                                Punchliner et passionné d'électro
                             </p>
                         </li>
                     </ul>
