--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                     une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
                     des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
                 </p>
+                <span class="button"><a href="about.html">En savoir plus !</a></span>
             </article>
         </section>
     </main>
