--- a/music/metal.html
+++ b/music/metal.html
@@ -26,6 +26,7 @@
     </aside>
     <main>
         <section class="no-top-separator">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Le metal
@@ -78,6 +79,7 @@
             </article>
         </section>
         <section id="heavy">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Heavy metal
@@ -88,6 +90,7 @@
             </article>
         </section>
         <section id="thrash">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Thrash metal
@@ -98,6 +101,7 @@
             </article>
         </section>
         <section id="black">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Black metal
@@ -108,6 +112,7 @@
             </article>
         </section>
         <section id="death">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Death metal
@@ -118,6 +123,7 @@
             </article>
         </section>
         <section id="power">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Power metal
@@ -128,6 +134,7 @@
             </article>
         </section>
         <section id="folk">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Folk metal
@@ -138,6 +145,7 @@
             </article>
         </section>
         <section id="doom">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Doom metal
@@ -147,6 +155,7 @@
                 </p>
             </article>
         </section>
+        <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
         <section id="alternative">
             <article>
                 <h3>
@@ -158,6 +167,7 @@
             </article>
         </section>
         <section id="groove">
+            <!--W3C :Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Groove metal
