--- a/music/metal.html
+++ b/music/metal.html
@@ -32,10 +32,11 @@
                 </h3>
                 <p>
                     Le metal est un style dérivé du rock, apparu dans les années 70s. Il a généralement un rythme très
-                    rapide et agressif. <a href="https://wikipedia.org/wiki/Black_Sabbath" target="_blank">Black Sabbath</a> a été le
+                    rapide et agressif. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black
+                        Sabbath</a> a été le
                     premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
                 </p>
-                <figure>
+                <figure class="simple-yt">
                     <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -47,34 +48,34 @@
                     Le style de musique s'est divisé au fil du temps en plusieurs sous-genre (liste non exhaustive) :
                 </p>
                 <ul>
-                        <li>
-                            <a href="#heavy">Heavy metal</a>
-                        </li>
-                        <li>
-                            <a href="#thrash">Thrash metal</a>
-                        </li>
-                        <li>
-                            <a href="#black">Black metal</a>
-                        </li>
-                        <li>
-                            <a href="#death">Death metal</a>
-                        </li>
-                        <li>
-                            <a href="#power">Power metal</a>
-                        </li>
-                        <li>
-                            <a href="#folk">Folk metal</a>
-                        </li>
-                        <li>
-                            <a href="#doom">Doom metal</a>
-                        </li>
-                        <li>
-                            <a href="#alternative">Alternative metal</a>
-                        </li>
-                        <li>
-                            <a href="#groove">Groove metal</a>
-                        </li>
-                    </ul>
+                    <li>
+                        <a href="#heavy">Heavy metal</a>
+                    </li>
+                    <li>
+                        <a href="#thrash">Thrash metal</a>
+                    </li>
+                    <li>
+                        <a href="#black">Black metal</a>
+                    </li>
+                    <li>
+                        <a href="#death">Death metal</a>
+                    </li>
+                    <li>
+                        <a href="#power">Power metal</a>
+                    </li>
+                    <li>
+                        <a href="#folk">Folk metal</a>
+                    </li>
+                    <li>
+                        <a href="#doom">Doom metal</a>
+                    </li>
+                    <li>
+                        <a href="#alternative">Alternative metal</a>
+                    </li>
+                    <li>
+                        <a href="#groove">Groove metal</a>
+                    </li>
+                </ul>
             </article>
         </section>
         <section id="heavy">
@@ -83,8 +84,36 @@
                     Heavy metal
                 </h3>
                 <p>
-
+                    Le heavy metal est le genre de metal le plus répandu. C'est un style dérivé du blues rock avec
+                    principalement de la guitare
+                    électrique. C'est également le style de metal qui a beaucoup inspiré pour créer la grande majorité
+                    des autres genres (thrash, black, doom, etc...).<br />
+                    3 artistes connus :
+                    <ul>
+                        <li>
+                            <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>
+                        </li>
+                        <li>
+                            <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a>
+                        </li>
+                        <li>
+                            <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
+                        </li>
+                    </ul>
                 </p>
+                <figure class="double-yt">
+                    <div>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <figcaption>
+                        Deux titres de heavy metal, Holy Diver de Dio et Run to the Hills de Iron Maiden
+                    </figcaption>
+                </figure>
             </article>
         </section>
         <section id="thrash">
