fixed the bordered figures

--- a/histoire.html
+++ b/histoire.html
@@ -78,7 +78,7 @@
             </article>
             <article>
                 <h3>La musique durant le Moyen-Âge</h3>
-                <figure class="float-right">
+                <figure class="float-right bordered">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/REVOIL_-_L%27Aubade_au_cygne.jpg/800px-REVOIL_-_L%27Aubade_au_cygne.jpg"
                         alt="troubadour" width="200" />
                     <figcaption>
@@ -117,7 +117,7 @@
             </article>
             <article>
                 <h3>La renaissance</h3>
-                <figure class="float-right">
+                <figure class="float-right bordered">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Viola_da_Gamba_Isenheimer_Altar.jpg/517px-Viola_da_Gamba_Isenheimer_Altar.jpg"
                         alt="Voile de Gambe" width="150" />
                     <figcaption> 
