--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>header</title>
-    <link rel="stylesheet" media="screen and (min-width:1081px)" href="css/style.css" />
-    <link rel="stylesheet" media="screen and (max-width:1080px)" href="css/mobile.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
     <base target="_parent" />
 </head>
 
 <body class="footer">
-    
+    <div class="authors">
+        <h2>Crédits : </h2>
+        <p>
+            <a href="https://github.com/WildGoat07">WildGoat</a> - Nathan HANEN |
+            <a href="https://github.com/oxypomme">OxyTom</a> - Tom SUBLET |
+            <a href="https://github.com/catherinegaochangdffeef">Chang GAO</a> |
+            <a href="https://github.com/maximejournet54">Maxime JOURNET</a><br />
+            <a href="https://github.com/oxypomme/PT19_20/contributors" class="contributors">Liste des
+                contributeurs</a><br />
+        </p>
+    </div>
+    <div>
+        <h2>Licence :</h2>
+        <a href="https://github.com/oxypomme/PT19_20/blob/master/LICENSE">MIT
+            Licence</a>
+    </div>
 </body>
 
 </html>
