--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                                         alt="GitHub icon" /> Profil GitHub</a>
                             </div>
                             <p>
-                                Développeur, graphiste et métalleux.
+                                Développeur, graphiste et metalleux.
                             </p>
                         </li>
                         <li>
