utilisation de flex pour le footer + support mobile

--- a/footer.html
+++ b/footer.html
@@ -10,21 +10,21 @@
 </head>
 
 <body class="footer">
-    <div class="authors">
-        <h2>Crédits : </h2>
-        <p>
-            <a href="https://github.com/WildGoat07">WildGoat</a> - Nathan HANEN |
-            <a href="https://github.com/oxypomme">OxyTom</a> - Tom SUBLET |
-            <a href="https://github.com/catherinegaochangdffeef">Chang GAO</a> |
-            <a href="https://github.com/maximejournet54">Maxime JOURNET</a><br />
-            <a href="https://github.com/oxypomme/PT19_20/contributors" class="contributors">Liste des
-                contributeurs</a><br />
-        </p>
-    </div>
     <div>
         <h2>Licence :</h2>
         <a href="https://github.com/oxypomme/PT19_20/blob/master/LICENSE">MIT
             Licence</a>
+    </div>
+    <div class="authors">
+        <h2>Crédits : </h2>
+        <p>
+            <a href="https://github.com/WildGoat07" target="_blank">WildGoat</a> - Nathan HANEN |
+            <a href="https://github.com/oxypomme" target="_blank">OxyTom</a> - Tom SUBLET |
+            <a href="https://github.com/catherinegaochangdffeef" target="_blank">Chang GAO</a> |
+            <a href="https://github.com/maximejournet54" target="_blank">Maxime JOURNET</a><br />
+            <a href="https://github.com/oxypomme/PT19_20/contributors" target="_blank" class="contributors">Liste des
+                contributeurs</a><br />
+        </p>
     </div>
 </body>
 
