added links to music styles

--- a/index.html
+++ b/index.html
@@ -45,12 +45,24 @@
                     présentés sont :
                 </p>
                 <ul>
-                    <li>La musique électronique</li>
-                    <li>Le metal</li>
-                    <li>La musique pop</li>
-                    <li>Le rock</li>
-                    <li>Le rap</li>
-                    <li>La musique alternative</li>
+                    <li>
+                        <a href="">La musique électronique</a>
+                    </li>
+                    <li>
+                        <a href="music/metal.html">Le metal</a>
+                    </li>
+                    <li>
+                        <a href="">La musique pop</a>
+                    </li>
+                    <li>
+                        <a href="">Le rock</a>
+                    </li>
+                    <li>
+                        <a href="">Le rap</a>
+                    </li>
+                    <li>
+                        <a href="">L' alternative</a>
+                    </li>
                 </ul>
                 <p>
                     Ces styles de musique on été choisis car c'est ceux que nous écoutons le plus.
