--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
         <section class="no-top-separator">
             <!--W3C : Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
-                <h2>
+                <h3>
                     Le projet
-                </h2>
+                </h3>
                 <p>
                     Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
                     une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
@@ -44,70 +44,71 @@
                 </p>
             </article>
             <article id="team">
-                <h2>
+                <h3>
                     L'équipe
-                </h2>
+                </h3>
                 <p>
                     Notre équipe est constituée de 4 membres :
-                    <ul class="profile">
-                        <li>
-                            <h3>Nathan HANEN</h3>
-                            <div>
-                                <img class="round" src="https://avatars0.githubusercontent.com/u/30344403"
-                                    alt="GitHub profil picture" />
-                            </div>
-                            <div>
-                                <a href="https://github.com/WildGoat07" target="_blank"><img src="images/github.png"
-                                        alt="GitHub icon" /> Profil GitHub</a>
-                            </div>
-                            <p>
-                                Développeur, graphiste et metalleux.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Tom SUBLET</h3>
-                            <div>
-                                <img class="round" src="https://avatars1.githubusercontent.com/u/34627360"
-                                    alt="GitHub profil picture" />
-                            </div>
-                            <div>
-                                <a href="https://github.com/oxypomme" target="_blank"><img src="images/github.png"
-                                        alt="GitHub icon" /> Profil GitHub</a>
-                            </div>
-                            <p>
-                                Développeur, designer et rockeur dans l'âme.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Chang GAO</h3>
-                            <div>
-                                <img class="round" src="https://avatars3.githubusercontent.com/u/56112613"
-                                    alt="GitHub profil picture" />
-                            </div>
-                            <div>
-                                <a href="https://github.com/catherinegaochangdffeef" target="_blank"><img
-                                        src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
-                            </div>
-                            <p>
-                                Designeuse et fan de pop
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Maxime JOURNET</h3>
-                            <div>
-                                <img class="round" src="https://avatars0.githubusercontent.com/u/56112283"
-                                    alt="GitHub profil picture" />
-                            </div>
-                            <div>
-                                <a href="https://github.com/maximejournet54" target="_blank"><img
-                                        src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
-                            </div>
-                            <p>
-                                Punchliner et passionné d'électro
-                            </p>
-                        </li>
-                    </ul>
                 </p>
+                <ul class="profile">
+                    <li>
+                        <h3>Nathan HANEN</h3>
+                        <div>
+                            <img class="round" src="https://avatars0.githubusercontent.com/u/30344403"
+                                alt="GitHub profil picture" />
+                        </div>
+                        <div>
+                            <a href="https://github.com/WildGoat07" target="_blank"><img src="images/github.png"
+                                    alt="GitHub icon" /> Profil GitHub</a>
+                        </div>
+                        <p>
+                            Développeur, graphiste et metalleux.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Tom SUBLET</h3>
+                        <div>
+                            <img class="round" src="https://avatars1.githubusercontent.com/u/34627360"
+                                alt="GitHub profil picture" />
+                        </div>
+                        <div>
+                            <a href="https://github.com/oxypomme" target="_blank"><img src="images/github.png"
+                                    alt="GitHub icon" /> Profil GitHub</a>
+                        </div>
+                        <p>
+                            Développeur, designer et rockeur dans l'âme.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Chang GAO</h3>
+                        <div>
+                            <img class="round" src="https://avatars3.githubusercontent.com/u/56112613"
+                                alt="GitHub profil picture" />
+                        </div>
+                        <div>
+                            <a href="https://github.com/catherinegaochangdffeef" target="_blank"><img
+                                    src="images/github.png" alt="GitHub icon" /> Profil GitHub</a>
+                        </div>
+                        <p>
+                            Designeuse et fan de pop
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Maxime JOURNET</h3>
+                        <div>
+                            <img class="round" src="https://avatars0.githubusercontent.com/u/56112283"
+                                alt="GitHub profil picture" />
+                        </div>
+                        <div>
+                            <a href="https://github.com/maximejournet54" target="_blank"><img src="images/github.png"
+                                    alt="GitHub icon" /> Profil GitHub</a>
+                        </div>
+                        <p>
+                            Punchliner et passionné d'électro
+                        </p>
+                    </li>
+                </ul>
+
             </article>
         </section>
     </main>
