new page on links

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </aside>
     <main>
         <section class="no-top-separator">
-            <!--W3C : Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
+            <!--* W3C : Section lacks heading. Consider using h2-h6 elements to add identifying headings to all sections.-->
             <article>
                 <h3>
                     Le projet
