--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
 <body class="footer">
     <div>
         <h2>Licence :</h2>
-        <a href="https://github.com/oxypomme/PT19_20/blob/master/LICENSE">MIT
+        <a href="https://github.com/oxypomme/PT19_20/blob/master/LICENSE" target="_blank">MIT
             Licence</a>
     </div>
     <div class="authors">
